# pses_workspace

./: .gitignore  .gitmodules  README.md
car_handler/: CMakeLists.txt  package.xml
car_handler/include/car_handler/: SerialCommunication.h  SerialCommunication_bak.h
car_handler/src/: cArduino.cpp  car_handler.cpp
installation-scripts/: README.md  install1.sh  install2.sh  install3.sh  install4.sh
pses_basis/: CMakeLists.txt  package.xml  package.xml~
pses_basis/config/: channels.yml  command_options.yml  commands.yml  general_syntax.yml  sensor_groups.yml  serial_interface_config.yml
pses_basis/data/: channel_group_syntax.yml  channels.yml  command_options.yml  commands.yml  data_types.yml  general_syntax.yml  requests.yml  sensor_groups.yml
pses_basis/data/command_descriptions/: drv_bwd.yml  drv_fwd.yml  drv_get.yml  drv_off.yml  id.yml  reset.yml  sid_get.yml  sid_set.yml  steering_get.yml  steering_set.yml  ver.yml
pses_basis/data/maps/FG_ES_RS_map/: FG_ES_RS_map.yaml
pses_basis/data/maps/FG_RS_Map/: map.yaml
pses_basis/data/maps/FG_RS_map/: FG_RS_map.yaml
pses_basis/data/sensor_descriptions/: ax.yml  ay.yml  az.yml  gx.yml  gy.yml  gz.yml  hall_cnt.yml  hall_dt.yml  hall_dt8.yml  mx.yml  my.yml  mz.yml  usf.yml  usl.yml  usr.yml  vdbat.yml  vsbat.yml
pses_basis/include/car_handler/: SerialCommunication.h
pses_basis/include/pses_basis/: Dashboard.cpp  Dashboard.h  Dashboard.ui  ForwardKinematics.h  InputStack.h  OdometryHelper.h  OdometryHelperAlt.h  PsesUcBoard.h  SerialCommunication.h  UcBoardException.h  base64Decoder.h  command.h  communication.h  communicationconfig.h  communicationthread.h  parameter.h  parsingthread.h  readingthread.h  sensorgroup.h  sensorgroupthread.h  serialinterface.h  servicefunctions.h  threaddispatcher.h  threadfactory.h  uc_bridge.h
pses_basis/launch/: pses_basis.launch  uc_bridge.launch
pses_basis/msg/: CarInfo.msg  Command.msg  PsesHeader.msg  SensorData.msg  SensorData.msg~
pses_basis/pses_basis/: CMakeLists.txt  package.xml
pses_basis/src/: ForwardKinematics.cpp  PsesUcBoard.cpp  car_dashboard.cpp  car_handler.cpp  car_odometry.cpp  command.cpp  communication.cpp  communicationconfig.cpp  readingthread.cpp  sensorgroup.cpp  sensorgroupthread.cpp  serialinterface.cpp  serialinterface.h  test.cpp  threaddispatcher.cpp  threadfactory.cpp  uc_bridge.cpp
pses_basis/srv/: DeleteGroup.srv  GetIMUInfo.srv  GetKinectStatus.srv  GetMagASA.srv  SetMag.srv  SetMotorLevel.srv  SetSessionID.srv  SetSteering.srv  ToggleDAQ.srv  ToggleKinect.srv  ToggleMotor.srv  ToggleUS.srv
pses_dashboard/: CMakeLists.txt  README.md  package.xml
pses_dashboard/include/pses_dashboard/: dashboard.h  dashboard.ui
pses_dashboard/launch/: dashboard.launch
pses_dashboard/src/: dashboard.cpp  dashboard_node.cpp
pses_simulation/: CMakeLists.txt  package.xml  package.xml~
pses_simulation/cfg/: RangeSensor.cfg
pses_simulation/include/pses_simulation/: CarModel.h  Dashboard.cpp  Dashboard.h  Dashboard.ui  ForwardKinematics.h  RangeSensor.h
pses_simulation/launch/: mapping_distr.launch  simulation.launch
pses_simulation/src/: CarModel.cpp  ForwardKinematics.cpp  RangeSensor.cpp  simulation_control.cpp  simulation_dashboard.cpp  simulation_laserscan.cpp  simulation_measurements.cpp  simulation_usscan.cpp
pses_ucbridge/: .gitignore  CMakeLists.txt  README.md  package.xml
pses_ucbridge/config/: command_options.yml  general_syntax.yml  sensor_groups.yml
pses_ucbridge/include/pses_ucbridge/: base64Decoder.h  command.h  communication.h  communicationconfig.h  readingthread.h  sensorgroup.h  sensorgroupthread.h  servicefunctions.h  syntax.h  threaddispatcher.h  uc_bridge.h
pses_ucbridge/launch/: uc_bridge.launch
pses_ucbridge/src/: command.cpp  communication.cpp  communicationconfig.cpp  readingthread.cpp  sensorgroup.cpp  sensorgroupthread.cpp  serialinterface.cpp  test.cpp  threaddispatcher.cpp  uc_bridge.cpp
pses_ucbridge/srv/: GetControllerID.srv  GetFirmwareVersion.srv  GetInfoGroup.srv  GetMotorLevel.srv  GetSessionID.srv  GetSteeringLevel.srv  ResetDMS.srv  SetIMU.srv  SetMotorLevel.srv  SetUS.srv  ToggleBrakes.srv  ToggleDMS.srv  ToggleGroup.srv
